final_report_assets/logs/k1_parameter_walk_sanity_256env_100iter_20260429_131052.log
nohup: ignoring input
bash: /home/team2/miniconda3/envs/env_isaacgym/lib/libtinfo.so.6: no version information available (required by bash)
[3gH    H    H    H    H    H    H    H    H    H    H    H    H    H    H    H    H    H    H    H   [INFO] Using python from: /home/team2/miniconda3/envs/env_isaaclab/bin/python
Loading user config located at: '/home/team2/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/isaacsim/kit/data/Kit/Isaac-Sim/5.1/user.config.json'
[Info] [carb] Logging to file: /home/team2/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/isaacsim/kit/logs/Kit/Isaac-Sim/5.1/kit_20260429_131052.log
2026-04-29T18:10:52Z [85ms] [Warning] [omni.usd_config.extension] Enable omni.materialx.libs extension to use MaterialX
2026-04-29T18:10:52Z [345ms] [Warning] [omni.platforminfo.plugin] failed to open the default display.  Can't verify X Server version.
2026-04-29T18:10:52Z [592ms] [Warning] [carb] Acquiring non optional plugin interface which is not listed as dependency: [omni::physx::IPhysxBenchmarks v1.0] (plugin: <default plugin>), by client: omni.physics.physx.plugin. Add it to CARB_PLUGIN_IMPL_DEPS() macro of a client.
2026-04-29T18:10:52Z [602ms] [Warning] [omni.isaac.dynamic_control] omni.isaac.dynamic_control is deprecated as of Isaac Sim 4.5. No action is needed from end-users.
2026-04-29T18:10:56Z [4,505ms] [Warning] [gpu.foundation.plugin] Skipping unsupported non-NVIDIA GPU: Intel(R) Graphics (RPL-S)
2026-04-29T18:10:56Z [4,505ms] [Warning] [gpu.foundation.plugin] Skipping unsupported non-NVIDIA GPU: Intel(R) Graphics (RPL-S)
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin] [parent]: timed out waiting for the child process 998555 to exec {errno = -1/Unknown error -1}
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin] failed to fork the child process {errno = -1/Unknown error -1, lastErrno = 11/Resource temporarily unavailable}
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin] launch descriptor for '/usr/bin/nvidia-smi' (2 arguments)
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin]     cmd: /usr/bin/nvidia-smi -q
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin]     onReadStdout = 0x76f3ca4cf5f0
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin]     onReadStderr = 0x76f3ca4cf5f0
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin]     readStdoutContext = 0x76f473fffaa0
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin]     readStderrContext = 0x76f473fffa60
2026-04-29T18:11:06Z [14,355ms] [Error] [carb.launcher.plugin]     interpreter = '/bin/bash'
[INFO][AppLauncher]: Using device: cuda:0
[INFO][AppLauncher]: Loading experience file: /home/team2/IsaacLab/apps/isaaclab.python.headless.kit
2026-04-29T18:11:06Z [14,355ms] [Warning] [carb.launcher.plugin] failed to launch the new process.
2026-04-29T18:11:06Z [14,355ms] [Warning] [gpu.foundation.plugin] Process '/usr/bin/nvidia-smi -q': not launched.
2026-04-29T18:11:06Z [14,355ms] [Warning] [gpu.foundation.plugin] nvidia-smi output not available.

|---------------------------------------------------------------------------------------------|
| Driver Version: 580.126.09    | Graphics API: Vulkan
|=============================================================================================|
| GPU | Name                             | Active | LDA | GPU Memory | Vendor-ID | LUID       |
|     |                                  |        |     |            | Device-ID | UUID       |
|     |                                  |        |     |            | Bus-ID    |            |
|---------------------------------------------------------------------------------------------|
| 0   | NVIDIA GeForce RTX 4090          | Yes: 0 |     | 24564   MB | 10de      | 0          |
|     |                                  |        |     |            | 2684      | 85dee919.. |
|     |                                  |        |     |            | 1         |            |
|---------------------------------------------------------------------------------------------|
| 1   | Intel(R) Graphics (RPL-S)        |        |     | 48050   MB | 8086      | 0          |
|     |                                  |        |     |            | a780      | 868080a7.. |
|     |                                  |        |     |            | 0         |            |
|=============================================================================================|
| OS: 22.04.5 LTS (Jammy Jellyfish) ubuntu, Version: 22.04.5, Kernel: 6.8.0-90-generic
| Processor: 13th Gen Intel(R) Core(TM) i9-13900K
| Bare Metal Cores: 24 | Bare Metal Logical Cores: 48
| Available Cores:  32 
|---------------------------------------------------------------------------------------------|
| Total Memory (MB): 64067 | Free Memory: 33250
| Total Page/Swap (MB): 2047 | Free Page/Swap: 0
|---------------------------------------------------------------------------------------------|
2026-04-29T18:11:06Z [14,377ms] [Warning] [gpu.foundation.plugin] IOMMU is enabled.
2026-04-29T18:11:06Z [14,377ms] [Warning] [gpu.foundation.plugin] Detected IOMMU is enabled. Running CUDA peer-to-peer bandwidth and latency validation.
Unidirectional P2P=Enabled Bandwidth (P2P Writes) Matrix (GB/s)
   D\D     0 
     0 917.50 
P2P=Enabled Latency (P2P Writes) Matrix (us)
   GPU     0 
     0   1.48 

   CPU     0 
     0   3.47 
Traceback (most recent call last):
  File "/home/team2/IsaacLab/scripts/reinforcement_learning/rsl_rl/train.py", line 227, in <module>
    main()
  File "/home/team2/IsaacLab/source/isaaclab_tasks/isaaclab_tasks/utils/hydra.py", line 80, in wrapper
    env_cfg, agent_cfg = register_task_to_hydra(task_name.split(":")[-1], agent_cfg_entry_point)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/team2/IsaacLab/source/isaaclab_tasks/isaaclab_tasks/utils/hydra.py", line 41, in register_task_to_hydra
    env_cfg = load_cfg_from_registry(task_name, "env_cfg_entry_point")
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/team2/IsaacLab/source/isaaclab_tasks/isaaclab_tasks/utils/parse_cfg.py", line 58, in load_cfg_from_registry
    cfg_entry_point = gym.spec(task_name.split(":")[-1]).kwargs.get(entry_point_key)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/team2/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/gymnasium/envs/registration.py", line 1000, in spec
    _check_version_exists(ns, name, version)
  File "/home/team2/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/gymnasium/envs/registration.py", line 392, in _check_version_exists
    _check_name_exists(ns, name)
  File "/home/team2/miniconda3/envs/env_isaaclab/lib/python3.11/site-packages/gymnasium/envs/registration.py", line 369, in _check_name_exists
    raise error.NameNotFound(
gymnasium.error.NameNotFound: Environment `Booster-K1-Parameter-Walk` doesn't exist.
2026-04-29T18:11:08Z [16,478ms] [Warning] [omni.physx.plugin] USD stage detach not called, holding a loose ptr to a stage!
2026-04-29T18:11:08Z [16,608ms] [Warning] [carb] Recursive unloadAllPlugins() detected!
